--- a/isil-client/src/main/resources/templates/index.html
+++ b/isil-client/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
                 </h5>
 
                 <p class="card-text">
-                    Desde aqui podremos realizar el mantenimiento de Alojamientos
+                    CRUD ALUMNO
                 </p>
 
                 <a th:href="@{/alumno}" class="btn btn-primary">
@@ -25,6 +25,34 @@
                 </a>
 
             </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h3 class="cartd-title">
+                    Cursos
+                </h3>
+                <p class="card-text">
+                    CRUD CURSOS
+                </p>
+                <a th:href="@{/curso}" class="btn btn-primary">
+                    Cursos
+                </a>
+            </div>
+
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h3 class="cartd-title">
+                    Notas
+                </h3>
+                <p class="card-text">
+                    CRUD NOTAS
+                </p>
+                <a th:href="@{/nota}" class="btn btn-primary">
+                    Notas
+                </a>
+            </div>
+
         </div>
         <!--<div class="card">
             <div class="card-body">
